--- a/data/ui/shortcuts.ui
+++ b/data/ui/shortcuts.ui
@@ -1,69 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
+  <requires lib="gtk" version="4.0"/>
   <object class="GtkShortcutsWindow" id="shortcuts_window">
     <property name="modal">True</property>
     <child>
       <object class="GtkShortcutsSection">
-        <property name="visible">True</property>
+        
         <property name="section-name">shortcuts</property>
         <property name="max-height">12</property>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="visible">True</property>
+            
             <property name="title" translatable="yes" context="shortcut window">General</property>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Main menu</property>
                 <property name="accelerator">F10</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Table of contents</property>
                 <property name="accelerator">&lt;Primary&gt;T</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">View article in other languages</property>
                 <property name="accelerator">&lt;Primary&gt;L</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Search text in page</property>
                 <property name="accelerator">&lt;Primary&gt;F</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Preferences</property>
                 <property name="accelerator">&lt;Primary&gt;E</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Copy Wikipedia URL</property>
                 <property name="accelerator">&lt;Primary&gt;U</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Quit</property>
                 <property name="accelerator">&lt;Primary&gt;Q</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Keyboard shortcuts</property>
                 <property name="accelerator">&lt;Primary&gt;question</property>
               </object>
@@ -72,18 +72,18 @@
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="visible">True</property>
+            
             <property name="title" translatable="yes" context="shortcut window">Bookmarks</property>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Show bookmarks</property>
                 <property name="accelerator">&lt;Primary&gt;B</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Add bookmark</property>
                 <property name="accelerator">&lt;Primary&gt;D</property>
               </object>
@@ -92,32 +92,32 @@
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="visible">True</property>
+            
             <property name="title" translatable="yes" context="shortcut window">Tabs</property>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">New tab</property>
                 <property name="accelerator">&lt;Primary&gt;N</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Close current tab</property>
                 <property name="accelerator">&lt;Primary&gt;W</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Next tab</property>
                 <property name="accelerator">&lt;Primary&gt;Tab</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Previous tab</property>
                 <property name="accelerator">&lt;Shift&gt;&lt;Primary&gt;Tab</property>
               </object>
@@ -126,46 +126,46 @@
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="visible">True</property>
+            
             <property name="title" translatable="yes" context="shortcut window">Navigation</property>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Search articles</property>
                 <property name="accelerator">F2 &lt;Primary&gt;K</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Wikipedia main page</property>
                 <property name="accelerator">&lt;Alt&gt;Home</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Show recent articles</property>
                 <property name="accelerator">&lt;Primary&gt;H</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Previous page</property>
                 <property name="accelerator">&lt;Alt&gt;Left</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Next page</property>
                 <property name="accelerator">&lt;Alt&gt;Right</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="visible">True</property>
+                
                 <property name="title" translatable="yes" context="shortcut window">Reload page</property>
                 <property name="accelerator">F5 &lt;Primary&gt;R</property>
               </object>
