--- a/data/ui/about.ui
+++ b/data/ui/about.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
+  <requires lib="gtk" version="4.0"/>
   <object class="GtkAboutDialog" id="about_dialog">
     <property name="program_name">Wike</property>
     <property name="version">1.6.1</property>
