--- a/data/ui/bookmarks.ui
+++ b/data/ui/bookmarks.ui
@@ -1,38 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="BookmarksPopover" parent="GtkPopover">
-    <property name="can_focus">False</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="border_width">10</property>
         <property name="orientation">vertical</property>
         <property name="spacing">8</property>
         <child>
           <object class="GtkScrolledWindow">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="shadow_type">in</property>
             <property name="min_content_width">260</property>
             <property name="max_content_height">400</property>
             <property name="hscrollbar-policy">never</property>
             <property name="propagate_natural_height">True</property>
             <child>
               <object class="GtkViewport">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkListBox" id="bookmarks_list">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
                     <child type="placeholder">
                       <object class="GtkLabel" id="placeholder_label">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="xpad">10</property>
-                        <property name="ypad">30</property>
                         <property name="justify">center</property>
                       </object>
                     </child>
@@ -41,48 +26,22 @@
               </object>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
         </child>
         <child>
           <object class="GtkBox">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="spacing">8</property>
             <property name="homogeneous">True</property>
             <child>
               <object class="GtkButton" id="add_button">
                 <property name="label" translatable="yes">Add Bookmark</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
             </child>
             <child>
               <object class="GtkButton" id="clear_button">
                 <property name="label" translatable="yes">Clear List</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
         </child>
       </object>
     </child>
