--- a/data/ui/header.ui
+++ b/data/ui/header.ui
@@ -1,53 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
-  <requires lib="libhandy" version="1.0"/>
-  <template class="HeaderBar" parent="HdyHeaderBar">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="title" translatable="no">Wike</property>
-    <property name="show_close_button">True</property>
+  <requires lib="gtk" version="4.0"/>
+  <requires lib="libadwaita" version="1.0"/>
+  <template class="HeaderBar" parent="GtkHeaderBar">
+		<property name="title-widget">
+			<object class="GtkLabel" id="window_title">
+				<property name="label" translatable="no">Wike</property>
+			</object>
+		</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <child>
           <object class="GtkButton" id="prev_button">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="action_name">win.prev_page</property>
             <child>
               <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="icon_name">go-previous-symbolic</property>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
         </child>
         <child>
           <object class="GtkButton" id="next_button">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="action_name">win.next_page</property>
             <child>
               <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="icon_name">go-next-symbolic</property>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
         </child>
         <style>
           <class name="linked"/>
@@ -56,124 +37,70 @@
     </child>
     <child>
       <object class="GtkButton" id="tab_button">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="tooltip-text" translatable="yes">New tab</property>
         <property name="action_name">win.new_tab</property>
         <child>
           <object class="GtkImage">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="icon_name">tab-new-symbolic</property>
           </object>
         </child>
       </object>
-      <packing>
-        <property name="position">1</property>
-      </packing>
     </child>
     <child>
       <object class="GtkToggleButton" id="search_button">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="tooltip-text" translatable="yes">Search articles</property>
         <child>
           <object class="GtkImage">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="icon_name">edit-find-symbolic</property>
           </object>
         </child>
       </object>
-      <packing>
-        <property name="position">2</property>
-      </packing>
     </child>
     <child>
       <object class="GtkMenuButton" id="menu_button">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <child>
           <object class="GtkImage">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="icon_name">open-menu-symbolic</property>
           </object>
         </child>
       </object>
-      <packing>
-        <property name="pack_type">end</property>
-        <property name="position">0</property>
-      </packing>
     </child>
     <child>
       <object class="GtkMenuButton" id="bookmarks_button">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="tooltip-text" translatable="yes">Bookmarks</property>
         <child>
           <object class="GtkImage">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="icon_name">user-bookmarks-symbolic</property>
           </object>
         </child>
       </object>
-      <packing>
-        <property name="pack_type">end</property>
-        <property name="position">1</property>
-      </packing>
     </child>
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <child>
           <object class="GtkMenuButton" id="toc_button">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="tooltip-text" translatable="yes">Table of contents</property>
             <child>
               <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="icon_name">view-list-symbolic</property>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
         </child>
         <child>
           <object class="GtkMenuButton" id="langlinks_button">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="tooltip-text" translatable="yes">View article in other languages</property>
             <child>
               <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="icon_name">wike-language-symbolic</property>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
         </child>
         <style>
           <class name="linked"/>
         </style>
       </object>
-      <packing>
-        <property name="pack_type">end</property>
-        <property name="position">2</property>
-      </packing>
     </child>
   </template>
 </interface>
