--- a/data/ui/menu.ui
+++ b/data/ui/menu.ui
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="MenuPopover" parent="GtkPopover">
-    <property name="can_focus">False</property>
     <property name="width-request">280</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="border_width">10</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkBox">
-            <property name="visible">True</property>
             <property name="halign">center</property>
             <property name="margin-bottom">6</property>
             <property name="spacing">24</property>
             <child>
-              <object class="GtkRadioButton" id="light_button">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
+              <object class="GtkToggleButton" id="light_button">
                 <property name="halign">center</property>
-                <property name="draw-indicator">False</property>
                 <child>
                   <object class="GtkImage">
-                    <property name="visible">True</property>
                     <property name="icon-name">emblem-ok-symbolic</property>
                   </object>
                 </child>
@@ -33,20 +24,13 @@
                   <class name="color-light"/>
                 </style>
               </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
             </child>
             <child>
-              <object class="GtkRadioButton" id="sepia_button">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
+              <object class="GtkToggleButton" id="sepia_button">
                 <property name="halign">center</property>
-                <property name="draw-indicator">False</property>
                 <property name="group">light_button</property>
                 <child>
                   <object class="GtkImage">
-                    <property name="visible">True</property>
                     <property name="icon-name">emblem-ok-symbolic</property>
                   </object>
                 </child>
@@ -55,20 +39,14 @@
                   <class name="color-sepia"/>
                 </style>
               </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
             </child>
             <child>
-              <object class="GtkRadioButton" id="dark_button">
-                <property name="visible">True</property>
+              <object class="GtkToggleButton" id="dark_button">
                 <property name="can-focus">True</property>
                 <property name="halign">center</property>
-                <property name="draw-indicator">False</property>
                 <property name="group">light_button</property>
                 <child>
                   <object class="GtkImage">
-                    <property name="visible">True</property>
                     <property name="icon-name">emblem-ok-symbolic</property>
                   </object>
                 </child>
@@ -77,161 +55,83 @@
                   <class name="color-dark"/>
                 </style>
               </object>
-              <packing>
-                <property name="position">2</property>
-              </packing>
             </child>
           </object>
         </child>
         <child>
           <object class="GtkSeparator">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Wikipedia Main Page</property>
             <property name="action_name">win.main_page</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">2</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Random Article</property>
             <property name="action_name">win.random_article</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">3</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Recent Articles</property>
             <property name="action_name">win.show_historic</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">4</property>
-          </packing>
         </child>
         <child>
           <object class="GtkSeparator">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">5</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Search Text in Page</property>
             <property name="action_name">win.search_text</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">6</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Open Wikipedia Page in Browser</property>
             <property name="action_name">win.open_browser</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">7</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Copy Wikipedia URL to Clipboard</property>
             <property name="action_name">win.copy_url</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">8</property>
-          </packing>
         </child>
         <child>
           <object class="GtkSeparator">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">10</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Preferences</property>
             <property name="action_name">app.prefs</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">11</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Keyboard Shortcuts</property>
             <property name="action_name">app.shortcuts</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">12</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">About Wike</property>
             <property name="action_name">app.about</property>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">13</property>
-          </packing>
         </child>
       </object>
     </child>
