--- a/data/ui/prefs-row.ui
+++ b/data/ui/prefs-row.ui
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="LanguageBoxRow" parent="GtkListBoxRow">
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        
+        
         <child>
           <object class="GtkLabel" id="lang_name_label">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            
+            
             <property name="halign">start</property>
             <property name="valign">center</property>
-            <property name="margin_left">12</property>
-            <property name="margin_right">6</property>
+            <property name="margin_start">12</property>
+            <property name="margin_end">6</property>
             <property name="margin_top">4</property>
             <property name="margin_bottom">4</property>
             <property name="hexpand">True</property>
@@ -26,12 +26,12 @@
         </child>
         <child>
           <object class="GtkLabel" id="lang_id_label">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            
+            
             <property name="halign">end</property>
             <property name="valign">center</property>
-            <property name="margin_left">6</property>
-            <property name="margin_right">6</property>
+            <property name="margin_start">6</property>
+            <property name="margin_end">6</property>
             <property name="margin_top">4</property>
             <property name="margin_bottom">4</property>
           </object>
@@ -43,12 +43,12 @@
         </child>
         <child>
           <object class="GtkCheckButton" id="lang_check">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            
+            
             <property name="halign">end</property>
             <property name="valign">center</property>
-            <property name="margin_left">12</property>
-            <property name="margin_right">18</property>
+            <property name="margin_start">12</property>
+            <property name="margin_end">18</property>
             <property name="margin_top">4</property>
             <property name="margin_bottom">4</property>
             <property name="draw_indicator">True</property>
