--- a/data/ui/search-row.ui
+++ b/data/ui/search-row.ui
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="SearchLangBoxRow" parent="GtkListBoxRow">
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        
+        
         <child>
           <object class="GtkLabel" id="label_name">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            
+            
             <property name="halign">start</property>
-            <property name="margin_left">6</property>
-            <property name="margin_right">6</property>
+            <property name="margin_start">6</property>
+            <property name="margin_end">6</property>
             <property name="margin_top">6</property>
             <property name="margin_bottom">6</property>
           </object>
@@ -24,8 +24,8 @@
         </child>
         <child>
           <object class="GtkImage" id="image_check">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            
+            
             <property name="halign">start</property>
           </object>
           <packing>
@@ -36,11 +36,11 @@
         </child>
         <child>
           <object class="GtkLabel" id="label_id">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            
+            
             <property name="halign">end</property>
-            <property name="margin_left">6</property>
-            <property name="margin_right">6</property>
+            <property name="margin_start">6</property>
+            <property name="margin_end">6</property>
             <property name="margin_top">3</property>
             <property name="margin_bottom">3</property>
           </object>
