--- a/data/ui/search.ui
+++ b/data/ui/search.ui
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.24"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="SearchEntry" parent="GtkSearchEntry">
-    <property name="visible">False</property>
-    <property name="can_focus">True</property>
     <property name="max_width_chars">40</property>
-    <property name="primary_icon_name">emblem-system-symbolic</property>
-    <property name="primary_icon_activatable">True</property>
-    <property name="primary_icon_sensitive">True</property>
+    <!-- <property name="primary_icon_name">emblem-system-symbolic</property> -->
+    <!-- <property name="primary_icon_activatable">True</property> -->
+    <!-- <property name="primary_icon_sensitive">True</property> -->
   </template>
 </interface>
 
